update readme, styling on each page, add more creature images, successfully breed new creatures
Co-authored-by: S. Podolak <stephpodolak@gmail.com>
Co-authored-by: Matt Taylor <taylor.matt@protonmail.com>
Co-authored-by: Jeremy Kale Padot <jeremy@padot.us>

--- a/CreatureTeacher/Views/Creatures/Create.cshtml
+++ b/CreatureTeacher/Views/Creatures/Create.cshtml
@@ -10,7 +10,7 @@
 <h2>How many unique creatures can you create?</h2>
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--6-col">
-		<div id="creature">
+		<div id="creature" class="sticky">
 			@Html.Partial("_ShowCreature")
 		</div>
 	</div>
@@ -95,7 +95,7 @@
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
-							</tr>?
+							</tr>
 							<tr>
 								<td class="mdl-data-table__cell--non-numeric">A ? A (Crimson)</td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
@@ -142,7 +142,7 @@
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
-							</tr>?
+							</tr>
 							<tr>
 								<td class="mdl-data-table__cell--non-numeric">C ? A (Green)</td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
@@ -190,7 +190,7 @@
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
-							</tr>?
+							</tr>
 							<tr>
 								<td class="mdl-data-table__cell--non-numeric">G ? A (Orange)</td>
 								<td class="mdl-data-table__cell--non-numeric"></td>
