--- a/CreatureTeacher/Views/Creatures/Index.cshtml
+++ b/CreatureTeacher/Views/Creatures/Index.cshtml
@@ -7,8 +7,8 @@
 @model List<CreatureTeacher.Models.Creature>
 
 
-<h1>Your Creature Friends!</h1>
-<h2>Click on a buddy to see their codons!</h2>
+<h1>Your Creature Collection</h1>
+<h2>Click on a creature to take a peek at their codons.</h2>
 
 @if (@Model.Count == 0)
 {
