--- a/CreatureTeacher/Views/Creatures/Learn.cshtml
+++ b/CreatureTeacher/Views/Creatures/Learn.cshtml
@@ -5,34 +5,66 @@
 <h1>A Lesson on Codons!</h1>
 
 <div class="get-started">
+
+  @* Introduction *@
   <div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--8-col">
-      <h2>What is a codon?</h2>
-      <p>The genetic code is the set of rules by which information encoded within genetic material (DNA or mRNA sequences) is translated into proteins by living cells. Biological decoding is done by the ribosome. This links amino acids together in an order specified by mRNA. It uses transfer RNA (tRNA) molecules to carry amino acids and to read the mRNA. The molecules read the mRNA three nucleotides at a time. These nucleotide triplets are called codons. A codon specifies which amino acid will be added next during protein synthesis. There are some exceptions, but usually a three-nucleotide codon represents a single amino acid.</p>
+    <div class="mdl-cell mdl-cell--1-col"></div>
+    <div class="mdl-cell mdl-cell--7-col">
+      <h2>Introducing DNA!</h2>
+      <p>Have you ever written a secret message to one of your friends? If so, you may have used a code to keep the message hidden. For instance, you may have replaced the letters of the word with numbers or symbols, following a particular set of rules. In order for your friend to understand the message, they would need to know the code and apply the same set of rules, in reverse, to decode it.</p>
+      <p>Decoding messages is also a key step in gene expression, in which information from a gene is read out to build a protein. In this article, we'll take a closer look at the genetic code, which allows DNA and RNA sequences to be "decoded" into the amino acids of a protein.</p>
     </div>
     <div class="mdl-cell mdl-cell--4-col">
       <img src="../../img/pokemon-steph.png" width="400">
     </div>
   </div>
 
+  @* DNA Proteins *@
   <div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--1-col"></div>
+    <div class="mdl-cell mdl-cell--4-col">
+      <img src="../../img/dna.png" width="200">
+    </div>
+    <div class="mdl-cell mdl-cell--7-col">
+      <h2>Background: Making a Protein</h2>
+      <p>Genes that provide instructions for proteins are expressed in a two-step process.</p>
+      <ul>
+        <li>In transcription, the DNA sequence of a gene is "rewritten" in RNA. In eukaryotes, the RNA must go through additional processing steps to become a messenger RNA, or mRNA.</li>
+        <li>In translation, the sequence of nucleotides in the mRNA is "translated" into a sequence of amino acids in a polypeptide (protein chain).</li>
+      </ul>
+    </div>
+  </div>
+
+  @* Defining Codons *@
+  <div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--7-col">
+      <h2>Okay, so what are codons?</h2>
+      <p>Cells decode mRNAs by reading their nucleotides in groups of three, called codons. Here are some features of codons:</p>
+
+        <p><i class="arrow right"></i> Most codons specify an amino acid</p>
+        <p><i class="arrow right"></i> Three "stop" codons mark the end of a protein</p>
+        <p><i class="arrow right"></i> One "start" codon, AUG, marks the beginning of a protein and also encodes the amino acid methionine</p>
+
+      <p>Codons in an mRNA are read during translation, beginning with a start codon and continuing until a stop codon is reached.</p>
+    </div>
     <div class="mdl-cell mdl-cell--4-col">
       <img src="../../img/codon.png" width="400">
     </div>
-    <div class="mdl-cell mdl-cell--8-col">
-      <h2>How do codons work?</h2>
-      <p>I don't actually know! Do you? Can you tell me?</p>
-    </div>
+    <div class="mdl-cell mdl-cell--1-col"></div>
   </div>
-</div>
 
-  <div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--8-col">
-      <h2>Dominant and Recessive Codons</h2>
-      <p>What's up with these?</p>
-    </div>
-    <div class="mdl-cell mdl-cell--4-col">
-      <img src="../../img/DominanceTable.png" width="400">
+    @* Dominant and Recessive Genes *@
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--4-col ">
+        <img src="../../img/DominanceTable.png" width="400">
+      </div>
+      <div class="mdl-cell mdl-cell--1-col" ></div>
+      <div class="mdl-cell mdl-cell--7-col">
+        <h2>Dominant and Recessive Genes</h2>
+        <p>Inside the DNA molecule are sections of information called genes. Each gene tells the cell how to make a certain protein which may determine a trait such as the color of the eyes. Each gene is made of a series of nucleic acids built by codons.</p>
+        <p>Each creatre inherits two genes for each trait from their parents. Some genes are more dominant than others. For example, green eyes are dominant over purple eyes. If a creature has a green eye gene and a purple eye gene, they will have green eyes. They will only have purple eyes if both genes are purple.</p>
+        <p>The green eye gene is called the dominant gene and the purple eye gene is the recessive gene.</p>
+        <p>A Punnet Square, as shown here, is a common way to figure out the pattern of inheritance.  A Punnet Square shows all the possible combinations of genes from the parents.</p>
+      </div>
     </div>
   </div>
-</div>
