--- a/CreatureTeacher/Views/Shared/_Layout.cshtml
+++ b/CreatureTeacher/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
       <!-- Navigation -->
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/Creatures/Learn">Get Started</a>
-        <a class="mdl-navigation__link" href="/Creatures/Create">Build New Creature</a>
+        <a class="mdl-navigation__link" href="/Creatures/Create">Creature Creation</a>
         <a class="mdl-navigation__link" href="/Creatures">Creature Collection</a>
         <a class="mdl-navigation__link" href="/Creatures/CreateChild">Create Baby Creature</a>
       </nav>
@@ -36,7 +36,7 @@
     <span class="mdl-layout-title logo">Creature Teacher</span>
     <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/Creatures/Learn">Get Started</a>
-        <a class="mdl-navigation__link" href="/Creatures/Create">Build New Creature</a>
+        <a class="mdl-navigation__link" href="/Creatures/Create">Creature Creation</a>
         <a class="mdl-navigation__link" href="/Creatures">Creature Collection</a>
         <a class="mdl-navigation__link" href="/Creatures/CreateChild">Create Baby Creature</a>
     </nav>
