--- a/CreatureTeacher/Views/Shared/_Parent1.cshtml
+++ b/CreatureTeacher/Views/Shared/_Parent1.cshtml
@@ -6,9 +6,19 @@
   string tailImagePath = Url.Content("../img/creatureImages/tails/" + @ViewBag.Parent1Tail);
 }
 
-    <div class="format-creature">
-      <img src="@bodyImagePath" width="500" id="bodyImg">
-      <img src="@eyeImagePath" width="500" id="eyeImg">
-      <img src="@mouthImagePath" width="500" id="mouthImg">
-      <img src="@tailImagePath" width="500" id="tailImg">
-    </div>
+<div class="details-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand">
+    <h3 class="card-title">Parent 1!</h3>
+    <img src="@eyeImagePath" width="500" id="eyesImg">
+    <img src="@bodyImagePath" width="500" id="bodyImg">
+    <img src="@mouthImagePath" width="500" id="mouthImg">
+    <img src="@tailImagePath" width="500" id="tailImg">
+    <img src="@headImagePath" width="500" id="headImg">
+  </div>
+</div>
+
+					@* <img src="../../img/creatureImages/bodies/body-blue.png" width="500" id="bodyImg">
+					<img src="../../img/creatureImages/mouths/@Url.Content(Model.Mouth.Image)" width="500" id="mouthImg">
+					<img src="../../img/creatureImages/eyes/@Url.Content(Model.Eye.Image)" width="500" id="eyesImg">
+					<img src="../../img/creatureImages/tails/@Url.Content(Model.Tail.Image)" width="500" id="tailImg">
+					<img src="../../img/creatureImages/hair/@Url.Content(Model.Head.Image)" width="500" id="headImg"> *@
