--- a/CreatureTeacher/Views/Shared/_ShowCreature.cshtml
+++ b/CreatureTeacher/Views/Shared/_ShowCreature.cshtml
@@ -2,4 +2,4 @@
   string imagePath = Url.Content(@Model);
 }
 
-<img src="../img/creatureImages/bodies/body-blue.png" width="500">
+<img src="../img/katy-blurb.png" width="500">
